<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clase3">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/stepTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/step"
            android:textSize="36sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stepInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:hint="@string/_1"
            android:inputType="number"
            android:textSize="24sp" />

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/start"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/counterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/contador"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Button
            android:id="@+id/stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/stop"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/reset"
            android:textSize="36sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>