<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clase2SegundaActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/value1TextView"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/valor_1"
            android:textAlignment="center"
            android:textSize="36sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value1"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/ingrese_valor"
            android:inputType="number|numberDecimal" />

        <TextView
            android:id="@+id/operationTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/acme"
            android:text="@string/Operacion"
            android:textAlignment="textStart"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/value2TextView"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/valor_2"
            android:textAlignment="center"
            android:textSize="36sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/ingrese_valor"
            android:inputType="number|numberDecimal" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/done"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>