<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clase4">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ISButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/IntentService"
            android:textSize="36sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/IStextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/ProcessService"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/ISResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:textSize="36sp" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <Button
            android:id="@+id/SButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/Service"
            android:textSize="36sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/IStextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/execution_order"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/SResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:textSize="36sp" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <Button
            android:id="@+id/BSButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/BoundService"
            android:textSize="36sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/BStextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/random_number"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/BSResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:textSize="36sp" />
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>