<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clase2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="98dp"
        android:layout_height="355dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="#090404"
            android:textSize="36sp"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/subtractionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/subtraction"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/multiplicationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/multiplication"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/divisionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:fontFamily="@font/acme"
            android:text="@string/division"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/resultado"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/valueTextView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="@font/acme"
            android:textSize="36sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>